# industrial-mcp

./: .dockerignore  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
examples/: ai_chat_interface.py  multi_device_dashboard.py  simple_pump_monitor.py
src/industrial_mcp/: __init__.py  cli.py  server.py
src/industrial_mcp/adapters/: __init__.py  base.py  modbus.py  mqtt.py  opcua.py
tests/: conftest.py  test_adapters.py  test_server.py
